fixed letter spacing on subhead

--- a/css/style.scss
+++ b/css/style.scss
@@ -140,7 +140,7 @@ header {
       font-family: "Domine", serif;
       font-size: 2.5em;
       text-align: center;
-      letter-spacing: 1px;
+      letter-spacing: .5px;
       color: #333;
       padding-top: 3%;
       padding-bottom: 1%;
